# civic-platform-mvp

./: .gitignore  CLAUDE.md  CNAME  README.md  how-it-works.html  index.html  quiz.html
backend/: .claudecodeignore  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0b94242b3368_initial_schema.py  44bcb3054b32_add_annotation_resolve_and_proposal_.py  a1b2c3d4e5f6_add_display_name_changed_event.py  a3b4c5d6e7f8_add_platform_role_to_users.py  a7b8c9d0e1f2_add_communities_table.py  b2c3d4e5f6a7_add_facilitator_requests.py  b4c5d6e7f8a9_populate_community_memberships_from_users.py  b8c9d0e1f2a3_add_community_memberships_table.py  c3d4e5f6a7b8_polymorphic_signals.py  c5d6e7f8a9b0_add_community_audit_event_types.py  c9d0e1f2a3b4_seed_test_community_and_scope_domains.py  d0e1f2a3b4c5_add_community_id_to_threads.py  d4e5f6a7b8c9_add_proposal_comments_and_amendments.py  d6e7f8a9b0c1_add_community_updated_audit_event.py  e1f2a3b4c5d6_add_community_id_to_facilitator_requests_and_pools.py  e5f6a7b8c9d0_add_proposal_versioning.py  f2a3b4c5d6e7_add_community_id_to_audit_logs.py  f6a7b8c9d0e1_add_annotation_system.py  g1h2i3j4k5l6_add_default_general_domain_to_communities.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  markdown.py  security.py
backend/app/db/: session.py
backend/tests/: conftest.py  test_amendments.py  test_annotation_perms.py  test_annotation_resolve.py  test_annotations.py  test_communities.py  test_proposal_markdown.py  test_proposal_versioning.py  test_threads.py
docs/: decisions.md  (+6 more)
(+97 files in other folders)
